--- a/ProductCatalog-Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/ProductCatalog-Web/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ProductCatolog_Core.Models.Product>
+﻿@using ProductCatolog_Core.Enums
+@model IEnumerable<ProductCatolog_Core.Models.Product>
 
 @{
     ViewData["Title"] = "Product List";
@@ -35,11 +36,25 @@
                     </td>
                     <td>@item.Category.Name</td>
                     <td>@item.CreatedDate.ToString("yyyy-MM-dd")</td>
+                    @{
+                        string badgeClass = "bg-danger"; 
+
+                        switch (item.Status)
+                        {
+                            case Status.Active:
+                                badgeClass = "bg-success";
+                                break;
+                            case Status.Featured:
+                                badgeClass = "bg-warning";
+                                break;
+                        }
+                    }
                     <td>
-                        <span class="badge @(item.Status == 0 ? "bg-success" : "bg-danger")">
+                        <span class="badge @badgeClass">
                             @item.Status
                         </span>
                     </td>
+
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary btn-sm" title="Edit">
                             <i class="fas fa-pen"></i> Edit
