--- a/ProductCatalog-Web/Areas/ContentManager/Views/Articles/Create.cshtml
+++ b/ProductCatalog-Web/Areas/ContentManager/Views/Articles/Create.cshtml
@@ -79,53 +79,5 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script src="https://cdn.tiny.cloud/1/1kxyrsdra6gg5wpiu45o5vpbsh5fq5glysoowx0x5zc96i0m/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
-    <script>
-        tinymce.init({
-            selector: '#introduction',
-            height: 400,
-            menubar: true,
-            plugins: [
-                'advlist autolink lists link image charmap print preview anchor',
-                'searchreplace visualblocks code fullscreen',
-                'insertdatetime media table paste code help wordcount'
-            ],
-            toolbar: 'undo redo | formatselect | ' +
-                'bold italic backcolor | alignleft aligncenter ' +
-                'alignright alignjustify | bullist numlist outdent indent | ' +
-                'removeformat | help',
-            content_style: 'body { font-family:Arial,sans-serif; font-size:14px }'
-        });
-
-        tinymce.init({
-            selector: '#development',
-            height: 400,
-            menubar: true,
-            plugins: [
-                'advlist autolink lists link image charmap print preview anchor',
-                'searchreplace visualblocks code fullscreen',
-                'insertdatetime media table paste code help wordcount'
-            ],
-            toolbar: 'undo redo | formatselect | ' +
-                'bold italic backcolor | alignleft aligncenter ' +
-                'alignright alignjustify | bullist numlist outdent indent | ' +
-                'removeformat | help',
-            content_style: 'body { font-family:Arial,sans-serif; font-size:14px }'
-        });
-
-        tinymce.init({
-            selector: '#conclusion',
-            height: 400,
-            menubar: true,
-            plugins: [
-                'advlist autolink lists link image charmap print preview anchor',
-                'searchreplace visualblocks code fullscreen',
-                'insertdatetime media table paste code help wordcount'
-            ],
-            toolbar: 'undo redo | formatselect | ' +
-                'bold italic backcolor | alignleft aligncenter ' +
-                'alignright alignjustify | bullist numlist outdent indent | ' +
-                'removeformat | help',
-            content_style: 'body { font-family:Arial,sans-serif; font-size:14px }'
-        });
-    </script>
+    <script src="~/js/ContentManager/Articles/create.js" asp-append-version="true"></script>
 }
