--- a/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Edit.cshtml
+++ b/ProductCatalog-Web/Areas/CustomerRelations/Views/Questions/Edit.cshtml
@@ -75,37 +75,5 @@
     }
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.tiny.cloud/1/1kxyrsdra6gg5wpiu45o5vpbsh5fq5glysoowx0x5zc96i0m/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
-    <script>
-        tinymce.init({
-            selector: '#question',
-            height: 400,
-            menubar: true,
-            plugins: [
-                'advlist autolink lists link image charmap print preview anchor',
-                'searchreplace visualblocks code fullscreen',
-                'insertdatetime media table paste code help wordcount'
-            ],
-            toolbar: 'undo redo | formatselect | ' +
-                     'bold italic backcolor | alignleft aligncenter ' +
-                     'alignright alignjustify | bullist numlist outdent indent | ' +
-                     'removeformat | help',
-            content_style: 'body { font-family:Arial,sans-serif; font-size:14px }',
-            readonly: 1
-        });
-        tinymce.init({
-            selector: '#answer',
-            height: 400,
-            menubar: true,
-            plugins: [
-                'advlist autolink lists link image charmap print preview anchor',
-                'searchreplace visualblocks code fullscreen',
-                'insertdatetime media table paste code help wordcount'
-            ],
-            toolbar: 'undo redo | formatselect | ' +
-                     'bold italic backcolor | alignleft aligncenter ' +
-                     'alignright alignjustify | bullist numlist outdent indent | ' +
-                     'removeformat | help',
-            content_style: 'body { font-family:Arial,sans-serif; font-size:14px }'
-        });
-    </script>
+    <script src="~/js/CustomerRelations/Questions/edit.js" asp-append-version="true"></script>
 }
