--- a/ProductCatalog-Web/Areas/CustomerRelations/Views/Shared/_Layout.cshtml
+++ b/ProductCatalog-Web/Areas/CustomerRelations/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
-    <link rel="stylesheet" href="~/css/customerRelations.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/css/CustomerRelations/layout.css" asp-append-version="true">
 </head>
 
 <body>
@@ -67,7 +67,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/customerRelations.js" asp-append-version="true"></script>
-
     @RenderSection("Scripts", required: false)
 </body>
 </html>
